the_project/manifests/backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: vsirvio/todo-backend:3929b7570ddd5935cedfd9ffdab8aa76473e4225bf858638c311f39a205c3b3f
