the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: static-vol
          persistentVolumeClaim:
            claimName: todo-app-static-claim
      containers:
        - name: todo-app
          image: PROJECT/IMAGE/FRONTEND
          volumeMounts:
          - name: static-vol
            mountPath: /app/static
          resources:
            requests:
              memory: "100Mi"
              cpu: "150m"
            limits:
              memory: "300Mi"
              cpu: "300m"
  strategy:
    type: Recreate
