the_project/manifests/postgres-sts.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-backend-postgres-svc
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: todo-backend-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: todo-backend-postgres-sts
spec:
  serviceName: todo-backend-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend-postgres
  template:
    metadata:
      labels:
        app: todo-backend-postgres
    spec:
      containers:
        - name: todo-backend-postgres
          image: postgres:15
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: todo-backend-postgres-vol
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "300Mi"
              cpu: "100m"
  volumeClaimTemplates:
    - metadata:
        name: todo-backend-postgres-vol
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 100Mi
